[package]
name = "iot"
version = "0.1.0"
authors = ["yubo <yubo@rivtower.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.5.0"
lazy_static = "1.4.0"
ethereum-types = "0.9.0"
futures = "0.3.4"
rand = "0.7.3"
#serde_json = "1.0.51"
sqlite = "0.25.0"
libsm = { git = "https://github.com/citahub/libsm", rev = "ac323abd3512a9fdb8bfd6cd349a6fc46deb688f" }
cita-tool = { git = "https://github.com/citahub/cita-cli", branch = "master"}